--- a/main/pubspec.yaml
+++ b/main/pubspec.yaml
@@ -48,6 +48,7 @@ flutter:
   assets:
    - assets/images/logo.png
    - assets/images/background.jpeg
+   - assets/images/pfl.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
